--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "redvery-vuejs-admin",
   "version": "7.0.1",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . -c .eslintrc.js --fix --rulesdir eslint-internal-rules/ --ext .ts,.js,.vue,.tsx,.jsx",
     "build:icons": "tsc -b resources/ts/@iconify && node resources/ts/@iconify/build-icons.js",
-    "postinstall": "npm run build:icons"
+    "dev": "vite",
+    "postinstall": "npm run build:icons",
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@casl/ability": "6.5.0",
@@ -48,6 +48,7 @@
     "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
+    "vuetify": "^2.6.0",
     "webfontloader": "1.6.28",
     "xlsx": "^0.18.5"
   },
@@ -83,6 +84,8 @@
     "eslint-plugin-vue": "9.11.0",
     "laravel-vite-plugin": "0.7.4",
     "postcss-html": "1.5.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
     "stylelint": "14.15.0",
     "stylelint-config-idiomatic-order": "9.0.0",
     "stylelint-config-standard-scss": "6.1.0",
@@ -96,8 +99,10 @@
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-vue-layouts": "0.8.0",
     "vite-plugin-vuetify": "1.0.2",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-shepherd": "3.0.0",
-    "vue-tsc": "1.6.2"
+    "vue-tsc": "1.6.2",
+    "vuetify-loader": "^1.7.0"
   },
   "packageManager": "yarn@1.22.18",
   "resolutions": {
