--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redvery-vuejs-admin",
   "version": "7.0.1",
   "scripts": {
+    "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint . -c .eslintrc.js --fix --rulesdir eslint-internal-rules/ --ext .ts,.js,.vue,.tsx,.jsx",
     "build:icons": "tsc -b resources/ts/@iconify && node resources/ts/@iconify/build-icons.js",
@@ -14,6 +15,7 @@
     "@casl/vue": "2.2.1",
     "@devindex/vue-mask": "^2.0.3",
     "@floating-ui/dom": "1.2.7",
+    "@mdi/font": "5.9.55",
     "@tabler/icons": "2.17.0",
     "@vuepic/vue-datepicker": "^6.1.0",
     "@vuetify/nightly": "^3.3.23-master.2023-11-03",
@@ -48,7 +50,7 @@
     "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
-    "vuetify": "^2.6.0",
+    "vuetify": "npm:@vuetify/nightly@next",
     "webfontloader": "1.6.28",
     "xlsx": "^0.18.5"
   },
@@ -84,8 +86,6 @@
     "eslint-plugin-vue": "9.11.0",
     "laravel-vite-plugin": "0.7.4",
     "postcss-html": "1.5.0",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
     "stylelint": "14.15.0",
     "stylelint-config-idiomatic-order": "9.0.0",
     "stylelint-config-standard-scss": "6.1.0",
@@ -101,8 +101,7 @@
     "vite-plugin-vuetify": "1.0.2",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-shepherd": "3.0.0",
-    "vue-tsc": "1.6.2",
-    "vuetify-loader": "^1.7.0"
+    "vue-tsc": "1.6.2"
   },
   "packageManager": "yarn@1.22.18",
   "resolutions": {
