--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
-    "vuetify": "npm:@vuetify/nightly@next",
+    "vuetify": "npm:@vuetify/nightly@master",
     "webfontloader": "1.6.28",
     "xlsx": "^0.18.5"
   },
