--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-prism-component": "^2.0.0",
     "vue-router": "4.1.6",
     "vue-virtual-scroller": "^2.0.0-beta.8",
+    "vue-virtual-table": "^0.2.22",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuetify": "npm:@vuetify/nightly@latest",
